Pass model arguments in prompttest

--- a/.github/workflows/post-commit.yaml
+++ b/.github/workflows/post-commit.yaml
@@ -24,7 +24,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Setup prompttools
       run: |
-        python setup.py install
+        python setup.py develop
     - name: Run tests
       run: |
         DEBUG=1 python examples/prompttests/example.py
