--- a/.github/workflows/post-commit.yaml
+++ b/.github/workflows/post-commit.yaml
@@ -27,4 +27,4 @@ jobs:
         python setup.py develop
     - name: Run tests
       run: |
-        DEBUG=1 python examples/prompttests/example.py
+        DEBUG=1 HEGELAI_API_KEY=1 python examples/prompttests/example.py
