--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -25,4 +25,6 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python: 
    install:
-   - requirements: docs/requirements.txt
+   - method: setuptools
+     path: .
+
