--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -23,8 +23,8 @@ sphinx:
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-python: 
-   install:
-   - method: setuptools
-     path: .
+python:
+  install:
+    - requirements: docs/requirements.txt
+
 
