--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,7 @@ jobs:
     - name: Test with pytest
       run: |
         pytest -v test
+    - name: Run examples
+      run: |
+        DEBUG=1 python examples/prompttests/test_openai_chat.py
+        DEBUG=1 python examples/prompttests/test_huggingface_hub.py
