Adding black line 120 width setting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ dynamic = ["dependencies", "license"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
+
+[tool.black]
+line-length = 120
