--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
+            const report = '👋 Thanks for reporting!'
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting!'
+              body: report
             })
