--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -28,13 +28,16 @@ jobs:
      - name: Create markdown
        run: |
          DEBUG=1 python scripts/create_comment.py
-      - uses: actions/github-script@v6
+     - name: Write comment
+        uses: actions/github-script@v6
         with:
           script: |
-            const report = process.env.PWD
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: report
-            })
+            import { readFile } from 'fs'
+            readFile('./markdown.md', 'utf8', (err, data) => {
+                github.rest.issues.createComment({
+                  issue_number: context.issue.number,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  body: data
+                })
+            });
