--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -10,6 +10,10 @@ jobs:
   comment:
     permissions: write-all
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.11"]
     steps:
      - name: Check out source repository
        uses: actions/checkout@v3
