--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,5 @@
 # Defining the exact version will make sure things don't break
 sphinx==5.3.0
-# sphinx_rtd_theme==1.1.1
-groundwork-sphinx-theme
+furo
 readthedocs-sphinx-search==0.1.1
 prompttools
