Guard installations of optional packages (#35)
* Guard installations of optional packages

* Adding more guards

* Guard logic

* Fix type annotation

* Use sentence-transformers

* Update prompttools/experiment/experiments/chromadb_experiment.py

Co-authored-by: Kevin Tse <NivekT@users.noreply.github.com>

* Add more guard logic

* More type annotation fixes

---------

Co-authored-by: Kevin Tse <NivekT@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,5 @@ pandas
 jinja2
 jupyterlab
 ipywidgets
-chromadb
-sentence_transformers
-huggingface_hub
-llama-cpp-python
+sentence-transformers
 pylint
-matplotlib
