--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the workflow on push or pull request
   pull_request:
     branches:
-      - main
+      - steventkrawczyk-test
 
 jobs:
   comment:
